# world-engine

./: .gitignore  CMakeLists.txt  README.md  WORKLOG.md  compile_flags.txt
.cache/clangd/index/: FastNoiseLite.h.E86991BB87761EBE.idx  analytical_erosion_stage.cpp.5B16332C68E4AB4A.idx  analytical_erosion_stage.h.0B1169776390F353.idx  geodesic_grid.cpp.3C0CC2AF76BDD328.idx  geodesic_grid.h.0A8FA01829A76FE5.idx  geodesic_physics_stage.cpp.B1B9EF541F6E5633.idx  geodesic_physics_stage.h.9760C2C9167453CF.idx  hydrology_stage.cpp.D19F6013EFAD2502.idx  hydrology_stage.h.4CA026BF7C478E50.idx  lodepng.cpp.24B97F678E84CC04.idx  lodepng.h.06D4F9E039E33B1A.idx  main.cpp.2C1A53A118F1A316.idx  masks_stage.cpp.6613949C70FB790C.idx  masks_stage.h.A718CF26EF2C82D9.idx  noise_stage.cpp.CD549489F1EA10C6.idx  noise_stage.h.50AE70AB3F9B4D88.idx  param_schema.cpp.18F111A265FCA065.idx  param_schema.h.CAD11F799ADCEDDF.idx  params.h.C07A0E4A19C330B0.idx  pipeline.cpp.DA816B581A451A2C.idx  pipeline.h.963F5F110CF9BBA3.idx  procedural_generator.cpp.07AAF7D455F98D85.idx  procedural_generator.h.825B70807F76D45D.idx  tectonics_stage.cpp.E3FAD5BF23212BCA.idx  tectonics_stage.h.CB1ABF9122DA7EBA.idx  terrain_dataset.cpp.38FD3F1E7B434C7F.idx  terrain_dataset.h.D60F93969C8502F0.idx  terrain_domain.cpp.CF355042638A14EE.idx  terrain_domain.h.DCECBDF1D2ED597E.idx  terrain_provider.h.115735FC4C5526AB.idx  terrain_types.h.53D353B50CCEF6F7.idx  test_determinism.cpp.5E41E10B8F24FCA1.idx  test_domain.cpp.AF7525E83F409B26.idx  test_geodesic.cpp.2BDD336A6E6D09F8.idx  test_geodesic_physics.cpp.FE25E574793F0DD9.idx  test_integration_generate.cpp.CFC417851DBEFDB7.idx  test_layers.cpp.BA39F37081F34F7B.idx  test_tectonics.cpp.1059DAE970535441.idx
bindings/python/: weterrain.cpp
client/: app.js  index.html  style.css
client/api/: client.js  mesh_bridge.js
client/renderer/: colormap.js  colormap_registry.js  engine.js
client/renderer/geometry/: icosahedral_geodesic.js
client/renderer/views/: globe_view.js  map_view.js
client/ui/: legend.js  parameter_panel.js  pipeline_panel.js  view_switcher.js
client/wasm/: worldengine.js  worldengine.wasm
client/workers/: mesh_worker.js
docs/: ALGORITHMS.md  API.md  ARCHITECTURE.md  ENV_SETUP.md  FMG_AUDIT.md  MAP_SUITE_DESIGN.md  PHASE1_SPEC.md  PIPELINE_DAG_DESIGN.md  ROADMAP.md  RP_DESIGN.md  TECTONICS_PLAN.md
docs/references/: sample_ico.hpp
docs/samples/: isekai_demo.md  vol1_shuangri.md  vol1_story_brief.md
docs/samples/rp_demo/: report.md  transcript.jsonl
docs/samples/vol1/: ch01.md  ch02.md  ch03.md  ch04.md  ch05.md  ch06.md  ch07.md  ch08.md  ch09.md  ch10.md  ch11.md  (+10 more)
server/: app.py
server/models/: params.py
server/routes/: generate.py  mesh.py  world.py
server/services/: generator.py  plate_generator.py  world_store.py
tests/: CMakeLists.txt  test_determinism.cpp  test_domain.cpp  test_geodesic.cpp  test_geodesic_physics.cpp  test_integration_generate.cpp  test_layers.cpp  test_tectonics.cpp
tests/e2e/: test_rp_studio.py  test_studio.py  test_workbench.py
tests/py/: test_astro.py  test_civ2.py  test_geoquery.py  test_graphdag.py  test_llmpool.py  test_novelize.py  test_novelkit.py  test_refine.py  test_refpack.py  test_rivers.py  test_rpkit.py  test_skymodel.py  test_worldstore.py
tools/scripts/: gen_blackbody_lut.py  novel_demo.py  rp_demo.py  vol1_generate.py
tools/terrain_cli/: CMakeLists.txt  main.cpp
tools/terrain_server/: ai_pool.json  app.py  astro.py  atlas.py  civ.py  civ2.py  geoquery.py  graphdag.py  imagegen.py  llmpool.py  novelize.py  novelkit.py  persistence.py  phasedag.py  refine.py  refpack.py  rivers.py  rpkit.py  skymodel.py  worldstore.py
ui/app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/rp/: index.html  rp.js
ui/terrain_editor/: app.js  index.html
world_engine/terrain/: CMakeLists.txt
world_engine/terrain/procedural/: CMakeLists.txt
world_engine/terrain/procedural/include/world_engine/terrain/procedural/: graph_ops.h  param_schema.h  params.h  pipeline.h  procedural_generator.h
world_engine/terrain/procedural/include/world_engine/terrain/procedural/stages/: analytical_erosion_stage.h  export_stage.h  geodesic_physics_stage.h  hydrology_stage.h  masks_stage.h  noise_stage.h  tectonics_stage.h
world_engine/terrain/procedural/src/: graph_ops.cpp  param_schema.cpp  pipeline.cpp  procedural_generator.cpp
world_engine/terrain/procedural/src/stages/: analytical_erosion_stage.cpp  geodesic_physics_stage.cpp  hydrology_stage.cpp  masks_stage.cpp  noise_stage.cpp  tectonics_stage.cpp
(+14 files in other folders)
